app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: client
          image: aviendre/cdc_3004-client:latest
          ports:
            - containerPort: 8000
        - name: server
          image: aviendre/cdc_3004-server:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
      name: client-port
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30081
      name: server-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
          - path: /server
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8001
